[gd_scene load_steps=2 format=3 uid="uid://dpq3l8r2ygm5j"]

[ext_resource type="Script" path="res://scenes/ui/debug_panel.gd" id="1_debug"]

[node name="DebugPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_debug")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "DEBUG PANEL - Resource Rates & Upgrades"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResourcesSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResourcesLabel" type="Label" parent="MarginContainer/VBoxContainer/ResourcesSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Resources:"

[node name="ResourcesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ResourcesSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UpgradesSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradesLabel" type="Label" parent="MarginContainer/VBoxContainer/UpgradesSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Upgrades:"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/UpgradesSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/UpgradesSection/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="RefreshTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.0
autostart = true
